# flood

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/flood/: board.py  main.py
src/flood/players/: base.py  graph.py  greedy.py  kurt.py  percentage.py  random.py  recursive.py
src/flood/players/graph/: Cargo.toml  README.md  graph.py  player.py  solver.py  types.py
src/flood/players/graph/src/: main.rs
