[project]
name = "flood"
version = "0.1.0"
description = "Solver for flash boardgame"
authors = [
    {name = "Luuk Verweij",email = "luuk_verweij@msn.com"},
]
dependencies = [
    "pygame>=2.5.2",
    "pyautogui>=0.9.54",
    "typer>=0.12.3",
    "requests>=2.31.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
solve = {call = "flood.main:solve"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.2.1",
    "pdbpp>=0.10.3",
]
